# conway-game-of-life

./: README.md  conway-game-of-life.cabal
app/: ConwayGame.hs  Main.hs  Peggy2Board.hs
